edit(intl): add adaptive for container on mobile; fix(form) spinner size

--- a/app/blocks/form/form.styl
+++ b/app/blocks/form/form.styl
@@ -123,7 +123,7 @@
 		background-image url(../images/spinner.svg)
 		background-repeat no-repeat
 		background-position center
-		background-size 100%
+		background-size 100% 100%
 		transform rotate(0deg)
 		animation-name spinner
 		animation-duration 1.8s
