--- a/app/blocks/intl-tel-input/intl-tel-input.styl
+++ b/app/blocks/intl-tel-input/intl-tel-input.styl
@@ -66,7 +66,7 @@
 		text-align left
 		white-space nowrap
 		background-color white
-		border 1px solid #CCC
+		border 1px solid #ccc
 		box-shadow 1px 1px 4px rgba(0, 0, 0, .2)
 
 		&.dropup
@@ -80,7 +80,7 @@
 		.divider
 			margin-bottom 5px
 			padding-bottom 5px
-			border-bottom 1px solid #CCC
+			border-bottom 1px solid #ccc
 
 		.country
 			padding 5px 10px
@@ -200,6 +200,11 @@
 			right 30px
 			left 30px
 			bottom 30px
+			+below('m')
+				top 20px
+				right 20px
+				left 20px
+				bottom 20px
 
 		.country-list
 			width 100%
